feat: added findBySlug, EventDraft object
